--- a/index.html
+++ b/index.html
@@ -97,14 +97,12 @@
                             <p>HELLO</p>
                         </div>
                         <h4 class="section-title">
-                            ABOUT ME
+                            Bio
                         </h4>
                         <p>
-                            I am Carl Watson.I am a web designer.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+							My name's Ravid, I'm a full-stack web developer and designer currently living in Orange County. I strive to provide users with well-crafted, simple, and intuitive web experiences that help accomplish goals.
                         </p>
-                        <p>
-                            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt.
-                        </p>
+                      
                         <a href="#">DOWNLOAD MY CV<i class="fa fa-download" aria-hidden="true"></i>
                         </a>
                     </div>
