changed a few errors

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 <a onclick="closePopup();" href="#nav-home">Home</a>
                 <a onclick="closePopup();" href="#nav-about">Bio</a>
                 <a onclick="closePopup();" href="#nav-portfolio">Work</a>
-                <a onclick="closePopup();" href="#nav-services">GitHub</a>
-				 <a onclick="closePopup();" href="#nav-services">LinkedIn</a>
+                <a onclick="closePopup();" href="#https://github.com/ravidyoeun">GitHub</a>
+				 <a onclick="closePopup();" href="https://www.linkedin.com/in/ravid-yoeun/">LinkedIn</a>
                 <a onclick="closePopup();" href="#nav-contact">Contact</a>
                 <a onclick="closePopup();">Close</a>
             </div>
@@ -499,7 +499,7 @@
                 <div class="container-content">
                 
                     <!-- Heading -->
-                    <h2>Please Get In Touch</h2>
+                    <h2>Let's Get In Touch</h2>
                     <span class="tag-line tertiary-text-colour service-heading"></span> <!-- Replace with a tag line -->
 
                     <div class="inline-container">
