--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         
         <!-- Fav icon -->
         <!-- Visit an online favicon generator and create a favicon, upload it to the root dirctory of your website. -->
-        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./favicon.ico?" type="image/x-icon">
+        <link rel="icon" href="./favicon.ico?" type="image/x-icon">
         
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="./wave-css/wave-css.css">
